helm/apps/outline/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline
  namespace: outline
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    geron.io/dns-scope: internal
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  tls:
    - secretName: outline-vasary-tls
      hosts:
        - outline.vasary.org
  rules:
    - host: outline.vasary.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: outline
                port:
                  name: http
